# storyt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  structure.md  test.py
.github/workflows/: tests.yml
docs/: database.md
example/: build_demo.py
storyt/: __init__.py  asset.py  binding.py  db.py  instance.py  logging.py  property_.py  query.py  serializers.py  story.py  types.py
storyt/viewer/: __init__.py  exporter.py
storyt/viewer/frontend/: eslint.config.js  index.html  package-lock.json  package.json
storyt/viewer/frontend/src/: App.tsx  fetchCache.ts  index.css  types.ts
storyt/viewer/frontend/src/components/: AssetListView.tsx  DataTable.tsx  InstanceCard.tsx
tests/: test_asset.py  test_binding.py  test_concurrency.py  test_db.py  test_indexing.py  test_property.py  test_query.py
tests/viewer/: conftest.py  test_exporter.py  test_frontend.py
tests/viewer/fixtures/: index.html
tests/viewer/fixtures/data/: hierarchy.json  simulation.json
tests/viewer/fixtures/data/sim_a/: mass.json  output.json
tests/viewer/fixtures/data/sim_a/halos_00001.txt/: halo.json
tests/viewer/fixtures/data/sim_b/: output.json
